# casecomp-judge

./: .gitignore  pyproject.toml  requirements.txt  run.py
config/: config.yaml  rubric.yaml
src/casecomp_judge/: __init__.py  cli.py  pipeline.py
src/casecomp_judge/agents/: fact_checker.py  judge.py  summarizer.py  vision_reader.py
src/casecomp_judge/extraction/: pdf_extractor.py
src/casecomp_judge/ingestion/: base.py  watcher.py
src/casecomp_judge/utils/: config.py  ollama_client.py  reporting.py  web_search.py
tests/: test_extraction.py  test_fact_checker.py  test_judge_self_critique.py
