[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casecomp-judge"
version = "0.1.0"
description = "Agentic pipeline to detect, process, summarise, and judge case competition decks using a local Ollama LLM."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "watchdog>=4.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.scripts]
casecomp-judge = "casecomp_judge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
